--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
     <header>
-        <p></p>
+        <p>hola</p>
     </header>
+        <div class="container">
+            <form action="logging.php" method="post">
+                <input type="text" name="name">
+                <input type="text" name="pass">
+            </form>
+        </div>
     <footer>
 
     </footer>
