--- a/usuario.html
+++ b/usuario.html
@@ -8,14 +8,13 @@
     <title>Document</title>
 </head>
 <body>
+
     <div class="container">
         <div class="content">
-            <form class="form" action="logging.php" method="post">
-                <h1>¡Bienvenido!</h1>
+            <form class="form" action="conexionbbdd.php" method="post">
                 <input type="text" class="username" name="name" placeholder="user">
                 <br>
-                <input type="text" class="username" name="pass" placeholder="pass">
-                <input type="button" class="button" value="send">
+                <input type="submit" value="send">
             </form>
         </div>
     </div>
