--- a/usuario.html
+++ b/usuario.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div class="content">
-            <form class="form" action="conexionbbdd.php" method="post">
+            <form class="form" action="conexionbbdd.php" method="GET">
                 <input type="text" class="username" name="name" placeholder="user">
                 <br>
                 <input type="submit" value="send">
